--- a/spring boot projects/SpringBootMVCLoginApp/SpringBootMVCLoginApp/src/main/resources/templates/login.html
+++ b/spring boot projects/SpringBootMVCLoginApp/SpringBootMVCLoginApp/src/main/resources/templates/login.html
@@ -14,5 +14,7 @@
 <input type="submit" value="SignIn"/>
 <input type="reset" value="reset"/>
 </form>
+<br/>
+<a href="signuppage">SignUp</a>
 </body>
 </html>
