--- a/spring boot projects/spring-boot-jpa/spring-boot-jpa/src/main/resources/templates/index.html
+++ b/spring boot projects/spring-boot-jpa/spring-boot-jpa/src/main/resources/templates/index.html
@@ -7,14 +7,14 @@
 <body>
 <span th:text="${msg}" style="color:red"></span>
 <h2>Product Management System</h2>
-<form action="#" th:action="@{addProduct}" method="post" th:object="${product}">
+<form action="#" th:action="@{/addProduct}" method="post" th:object="${product}">
 <label>PId</label>
 <input type="number" th:field="*{pid}" /><br/>
 <label>PName</label>
 <input type="text" th:field="*{pname}" /><br/>
 <label>Price</label>
 <input type="number" th:field="*{price}"/> <br/>
-<input type="submit" value="Add product"/>
+<input type="submit" th:value="${bb}" name="mySubmitButton"/>
 <input type="reset" value="reset"/>
 </form>
 <hr/>
@@ -24,12 +24,14 @@
 		<th>PName</th>
 		<th>Price</th>
 		<th>Delete</th>
+		<th>Update</th>
 	</tr>
 	<tr th:each="p:${products}">
 		<td th:text="${p.pid}"></td>
 		<td th:text="${p.pname}"></td>
 		<td th:text="${p.price}"></td>
-		<td><a th:href="@{deleteProduct(pid=${p.pid})}">Delete</a></td>
+		<td><a th:href="@{/deleteProduct(pid=${p.pid})}">Delete</a></td>
+		<td><a th:href="@{/updateProductInfo(pid=${p.pid})}">Update</a></td>
 	</tr>
 </table>
 </body>
